[package]
name = "capyhourly"
version = "0.1.0"
edition = "2021"

[dependencies]
# comment out before publishing
dotenv = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.21", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart"] }
reqwest-oauth1 = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
